Revert "refactor PropertyValues sligtly"
This reverts commit 0c45bc3e211cdf5045f9e1ff44fa9f47bce5c097.